# denc

./: .gitignore  README.md  pyproject.toml  requirements.txt
denc/: __init__.py  acodec.py  base_thread.py  colorpspace.py  decoder.py  decoder_thread.py  dh_transfers.py  encoder.py  encoder_thread.py  img_io.py  img_reader.py  img_writer.py  io.py  media_stream.py  np_dtypes.py  p_print.py  presets.py  pxl_fmt.py  seek.py  time_conversions.py  tools.py  torch_tensor.py  vcodec.py  video_io.py  vstream.py
denc/img/: io.py  reader.py  writer.py
denc/utils/: logger.py  np_dtypes.py  path_utils.py  time_conversions.py  tools.py  utils.py
tests/: test_import.py  test_load_images.py  test_open_video.py  test_save_video.py  test_write_images.py
